--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2967,7 +2967,7 @@ ul.staggered-list li {
   }
 }
 
-.page-footer {
+.page-footer-fixed {
   padding-top: 20px;
   color: #fff;
   background-color: #ee6e73;
@@ -2977,7 +2977,35 @@ ul.staggered-list li {
   width: 100%
 }
 
+.page-footer {
+  padding-top: 20px;
+  color: #fff;
+  background-color: #ee6e73;
+  width: 100%
+}
+
+
 .page-footer .footer-copyright {
+  overflow: hidden;
+  min-height: 50px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 10px 0px;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(51, 51, 51, 0.08);
+}
+
+.page-footer-fixed .footer-copyright {
   overflow: hidden;
   min-height: 50px;
   display: -webkit-box;
